--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,10 +4,14 @@
             <ion-text class="text-lg font-bold">myyba</ion-text>
             <ion-text class="text-sm tracking-[0.4em]">shops</ion-text>
         </ion-row>
-        <ion-row class="navbar_right space-x-6 uppercase font-bold">
+        <ion-row class="navbar_right space-x-8 uppercase font-bold">
             <ion-text class="hover-underline-animation">
                 Home
             </ion-text>
+            <ion-text class="hover-underline-animation">
+                Products & Services
+            </ion-text>
+
             <ion-text class="hover-underline-animation">
                 About
             </ion-text>
