New: Banner Section (incomplete)

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,1 +1,35 @@
-<p>banner works!</p>
+<ion-grid class="bannerWrapper">
+    <ion-row class="upperBanner"></ion-row>
+
+    <ion-grid class="middleBanner">
+        <!-- //Right Section Banner (Main) -->
+        <ion-row class="middleBanner-carouselSection">
+
+            <ion-img src="/assets/images/bannerDevices.png" class="object-contain w-96"></ion-img>
+
+            <ion-text id="middleBanner-leftText" class="text-[#a1a1a1] uppercase w-72 text-center -mt-7 font-medium">
+                <ion-text class="text-white font-bold">Personalised </ion-text>online store & robust pos
+            </ion-text>
+
+            <ion-button class="btn-features">
+                View Features
+            </ion-button>
+
+        </ion-row>
+
+        <!-- //Right Section Banner -->
+        <ion-row class="middleBanner-loginSection">
+            <ion-row class="loginSectionText">
+                <ion-text class="font-medium">What is Myyba Shops?</ion-text>
+                <ion-text class="font-bold italic border-b border-[#464545] border-dashed pb-4">It is everything your business needs to <ion-text
+                        class="text-[#2D2F7F]">succeed </ion-text> under a single roof</ion-text>
+            </ion-row>
+            <ion-textarea>
+                <ion-text>
+                    Enter your number to request a FREE demo
+                </ion-text>
+            </ion-textarea>
+        </ion-row>
+    </ion-grid>
+    <ion-row class="lowerBanner"></ion-row>
+</ion-grid>
