Add: More Styling into banner

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -21,14 +21,26 @@
         <ion-row class="middleBanner-loginSection">
             <ion-row class="loginSectionText">
                 <ion-text class="font-medium">What is Myyba Shops?</ion-text>
-                <ion-text class="font-bold italic border-b border-[#464545] border-dashed pb-4">It is everything your business needs to <ion-text
-                        class="text-[#2D2F7F]">succeed </ion-text> under a single roof</ion-text>
-            </ion-row>
-            <ion-textarea>
-                <ion-text>
+                <ion-text class="font-bold italic border-b border-[#464545] border-dashed pb-4">It is everything your
+                    business needs to <ion-text class="text-[#2D2F7F]">succeed </ion-text> under a single roof
+                </ion-text>
+                <ion-text class="text-[#737373] text-[13px]">
                     Enter your number to request a FREE demo
                 </ion-text>
-            </ion-textarea>
+            </ion-row>
+
+            <ion-row class="middleBanner-inputField">
+                <ion-button fill="clear">
+                    <ion-input type="tel" class="inputPhone" [clearInput]="true" placeholder="PHONENUMBER"></ion-input>
+                </ion-button>
+                <ion-button class="btn-reqDemo">
+                    <span>
+                        Request Demo
+                        <ion-icon name="chevron-forward-outline"></ion-icon>
+                    </span>
+                </ion-button>
+            </ion-row>
+
         </ion-row>
     </ion-grid>
     <ion-row class="lowerBanner"></ion-row>
