--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,7 +1,6 @@
 .bannerWrapper {
     position: relative;
     height: 470px;
-    // padding: 3rem 0;
 
     padding: 0;
 
@@ -24,10 +23,20 @@
     z-index: 3;
     color: black;
     inset: 0 auto;
-    padding: 0;
+    padding-right: 2.7rem;
+    max-width: 1280px;
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+@media only screen and (min-width: 1024px) {
+    .middleBanner {
+        padding-right: 5px;
+        justify-content: space-between;
+        padding: 0;
+        margin-left: 4rem;
+    }
 }
 
 .middleBanner-carouselSection {
@@ -40,21 +49,69 @@
     width: 100%;
     max-width: 18rem;
 
-    --border-width: 1px;
-    --background-color: #fff;
+}
+
+.btn-features > ion-button {
+    background-color: #fff;
+    border-color: red;
 }
 
 .middleBanner-loginSection {
     // margin-right: 4rem;
     max-width: 19rem;
     margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+@media only screen and (min-width: 1024px) {
+    .middleBanner-loginSection {
+        margin: 0;
+        margin-right: 2rem;
+    }
 }
 
 .loginSectionText {
     display: flex;
     flex-direction: column;
 
-    padding: 3.5rem 0;
+    padding-top: 3rem;
+    padding-bottom: .5rem;
+}
+
+.middleBanner-inputField {
+    background: #DADADA;
+    width: 100%;
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+ion-button {
+    span {
+        display: flex;
+        align-items: center;
+
+        text-align: left;
+        width: 100%;
+        font-weight: 500;
+    }
+}
+
+.inputPhone {
+    background: #fff;
+}
+
+.inputPhone .native-input.sc-ion-input-md {
+    padding: 0;
+
+}
+
+.btn-reqDemo {
+    text-align: left;
 }
 
 .lowerBanner {
