--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -30,16 +30,25 @@
             </ion-row>
 
             <ion-row class="middleBanner-inputField">
-                <ion-button fill="clear">
-                    <ion-input type="tel" class="inputPhone" [clearInput]="true" placeholder="PHONENUMBER"></ion-input>
-                </ion-button>
-                <ion-button class="btn-reqDemo">
-                    <span>
-                        Request Demo
-                        <ion-icon name="chevron-forward-outline"></ion-icon>
-                    </span>
-                </ion-button>
+                <ion-row class="inputField-Container">
+                    <ion-button fill="clear">
+                        <ion-input type="tel" class="inputPhone" [clearInput]="true" placeholder="PHONENUMBER">
+                        </ion-input>
+                    </ion-button>
+                    <ion-button class="btn-reqDemo">
+                        <span>
+                            Request Demo
+                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                        </span>
+                    </ion-button>
+                </ion-row>
             </ion-row>
+            <ion-button class="btn-whatsapp">
+                <span class="">
+                    Whatsapp us
+                    <ion-icon name="chevron-forward-outline"></ion-icon>
+                </span>
+            </ion-button>
 
         </ion-row>
     </ion-grid>
