--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -24,7 +24,7 @@
     color: black;
     inset: 0 auto;
     padding-right: 2.7rem;
-    max-width: 1280px;
+    max-width: 1200px;
 
     display: flex;
     justify-content: space-around;
@@ -33,9 +33,8 @@
 @media only screen and (min-width: 1024px) {
     .middleBanner {
         padding-right: 5px;
-        justify-content: space-between;
         padding: 0;
-        margin-left: 4rem;
+        // margin-left: 4rem;
     }
 }
 
@@ -51,7 +50,7 @@
 
 }
 
-.btn-features > ion-button {
+.btn-features>ion-button {
     background-color: #fff;
     border-color: red;
 }
@@ -59,7 +58,7 @@
 .middleBanner-loginSection {
     // margin-right: 4rem;
     max-width: 19rem;
-    margin: 0 auto;
+    // margin: 0 auto;
 
     display: flex;
     flex-direction: column;
@@ -82,9 +81,19 @@
 }
 
 .middleBanner-inputField {
-    background: #DADADA;
+    padding-bottom: .3rem;
     width: 100%;
+
+    border-bottom-width: 1px;
+    border-color: #C4C4C4;
+    border-style: dashed;
+}
+
+.inputField-Container {
+    background: #DADADA;
     border-radius: 5px;
+    width: 100%;
+    margin-bottom: .75rem;
 
     display: flex;
     flex-direction: column;
@@ -112,6 +121,14 @@ ion-button {
 
 .btn-reqDemo {
     text-align: left;
+}
+
+.btn-whatsapp {
+    background: green !important;
+
+
+    width: 100%;
+    margin-top: .75rem;
 }
 
 .lowerBanner {
