--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -124,9 +124,7 @@ ion-button {
 }
 
 .btn-whatsapp {
-    background: green !important;
-
-
+    --background: green;
     width: 100%;
     margin-top: .75rem;
 }
