Fix: Responsive behavior

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -11,7 +11,7 @@
                 <ion-text class="text-white font-bold">Personalised </ion-text>online store & robust pos
             </ion-text>
 
-            <ion-button class="btn-features">
+            <ion-button color="translucent" class="btn-features">
                 View Features
             </ion-button>
 
@@ -21,21 +21,19 @@
         <ion-row class="middleBanner-loginSection">
             <ion-row class="loginSectionText">
                 <ion-text class="font-medium">What is Myyba Shops?</ion-text>
-                <ion-text class="font-bold italic border-b border-[#464545] border-dashed pb-4">It is everything your
+                <ion-text class="font-bold italic border-b border-[#464545] border-dashed pb-3">It is everything your
                     business needs to <ion-text class="text-[#2D2F7F]">succeed </ion-text> under a single roof
                 </ion-text>
-                <ion-text class="text-[#737373] text-[13px]">
-                    Enter your number to request a FREE demo
+                <ion-text class="text-[#737373] text-[13px] pt-2">
+                    Enter your number to request a <ion-text class="italic font-bold">FREE</ion-text> demo
                 </ion-text>
             </ion-row>
 
             <ion-row class="middleBanner-inputField">
                 <ion-row class="inputField-Container">
-                    <ion-button fill="clear">
                         <ion-input type="tel" class="inputPhone" [clearInput]="true" placeholder="PHONENUMBER">
                         </ion-input>
-                    </ion-button>
-                    <ion-button class="btn-reqDemo">
+                    <ion-button color="purplePink" class="btn-reqDemo">
                         <span>
                             Request Demo
                             <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -43,8 +41,8 @@
                     </ion-button>
                 </ion-row>
             </ion-row>
-            <ion-button class="btn-whatsapp">
-                <span class="">
+            <ion-button color="whatsapp" class="btn-whatsapp">
+                <span>
                     Whatsapp us
                     <ion-icon name="chevron-forward-outline"></ion-icon>
                 </span>
