--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,8 +14,9 @@
     align-items: center;
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1280px) {
     .navbar {
+        justify-content: space-between;
     }
 }
 
