--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -47,7 +47,17 @@
 .btn-features {
     width: 100%;
     max-width: 18rem;
+    background: rgba(128, 128, 128, 0.32) 32%;
 
+    border: 0.5px solid #FFFFFF;
+    border-radius: 5px;
+    font-weight: 600;
+    // letter-spacing: normal;
+    letter-spacing: -0.025em;
+}
+
+ion-button.ion-color-translucent {
+    --ion-color-base: linear-gradient(to right, rgba(128, 128, 128, 0.322) 1%, rgba(255, 255, 255, 0)) !important;
 }
 
 .btn-features>ion-button {
@@ -65,12 +75,6 @@
     align-items: flex-start;
 }
 
-@media only screen and (min-width: 1024px) {
-    .middleBanner-loginSection {
-        margin: 0;
-        margin-right: 2rem;
-    }
-}
 
 .loginSectionText {
     display: flex;
@@ -99,36 +103,40 @@
     flex-direction: column;
 }
 
-ion-button {
-    span {
-        display: flex;
-        align-items: center;
-
-        text-align: left;
-        width: 100%;
-        font-weight: 500;
-    }
-}
-
 .inputPhone {
     background: #fff;
+
+    margin: 4px 2px;
+    width: 298px;
+
+    border-radius: 5px;
 }
 
 .inputPhone .native-input.sc-ion-input-md {
     padding: 0;
-
 }
 
 .btn-reqDemo {
-    text-align: left;
+    font-weight: 700;
+    letter-spacing: -0.025em;
+}
+
+ion-button.ion-color-purplePink {
+    --ion-color-base: linear-gradient(to right, #0010A0, #580DA3) !important;
 }
 
 .btn-whatsapp {
-    background: green !important;
-
-
     width: 100%;
     margin-top: .75rem;
+}
+
+.btn-whatsapp>span {
+    font-weight: 700;
+    letter-spacing: -0.025em;
+}
+
+ion-button.ion-color-whatsapp {
+    --ion-color-base: linear-gradient(to left, #0DA340, #05752B, #00A037AB) !important;
 }
 
 .lowerBanner {
@@ -138,4 +146,28 @@ ion-button {
     background-color: black;
     bottom: 0;
     z-index: -3;
+}
+
+ion-button {
+    span {
+        display: flex;
+        align-items: center;
+
+        text-align: left;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .middleBanner-loginSection {
+        margin: 0;
+        margin-right: 2rem;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .middleBanner {
+        justify-content: space-between;
+        max-width: 1280px;
+    }
 }
