--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -16,6 +16,10 @@
     z-index: -3;
     top: 0;
 }
+#mainrow{
+    width: 100%;
+    background: linear-gradient(to bottom,  white 0%,white 50%,black 50%,black 100%);
+}
 
 .middleBanner {
     position: relative;
@@ -42,6 +46,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: none;
+    border: none;
+    box-shadow: none;
 }
 
 .btn-features {
