--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,6 +2,9 @@
     background: none; //disabled default header Shadow
 }
 
+#mainrow{
+    width: 100%;
+}
 .headerWrapper {
     padding: 1.5rem 0;
     max-width: 1200px;
@@ -19,7 +22,12 @@
         justify-content: space-between;
     }
 }
-
+.navbar_right{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 0;
+}
 .navbar_left {
     display: flex;
     flex-direction: column;
