--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,18 +1,28 @@
 .myybaKnowMore-wrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 
     // padding: 0 1.25rem;
     position: relative;
+    background-image: linear-gradient(to right, rgb(231, 231, 231), rgba(220, 222, 223, 0));
+}
+
+.container {
+    max-width: 1240px !important;
 }
 
 .discussImage-container {
-    z-index: -2;
     margin-right: auto;
 }
 
 .discussImg {
     width: 34rem;
+}
+
+@media only screen and (min-width: 1200px) {
+    .discussImg {
+        width: 50rem;
+    }
 }
 
 .myybaKnowMore-description {
@@ -25,6 +35,16 @@
     width: 58%;
     height: 19rem;
     z-index: 3;
+    padding-right: 1.5rem;
 
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .9), rgba(255, 255, 255, 1));
+}
+
+@media only screen and (min-width: 1280px) {
+    .myybaKnowMore-description {
+        height: 28rem;
+
+        padding-right: 0;
+    }
+
 }
