--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,6 +1,6 @@
 .bannerWrapper {
     position: relative;
-    height: 470px;
+    height: 35rem;
 
     padding: 0;
 
@@ -8,17 +8,13 @@
     align-items: center;
 }
 
-.upperBanner {
-    position: absolute;
-    height: 50%;
-    width: 100%;
-    background-color: white;
-    z-index: -3;
-    top: 0;
-}
 #mainrow{
     width: 100%;
+    height: 35rem;
     background: linear-gradient(to bottom,  white 0%,white 50%,black 50%,black 100%);
+
+    display: flex;
+    align-items: center;
 }
 
 .middleBanner {
@@ -27,11 +23,10 @@
     z-index: 3;
     color: black;
     inset: 0 auto;
-    padding-right: 2.7rem;
-    max-width: 1200px;
+    // padding-right: 2.7rem;
 
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -49,6 +44,10 @@
     background: none;
     border: none;
     box-shadow: none;
+}
+
+.carouselContainer {
+    max-width: 24rem;
 }
 
 .btn-features {
@@ -146,14 +145,6 @@ ion-button.ion-color-whatsapp {
     --ion-color-base: linear-gradient(to left, #0DA340, #05752B, #00A037AB) !important;
 }
 
-.lowerBanner {
-    position: absolute;
-    height: 53%;
-    width: 100%;
-    background-color: black;
-    bottom: 0;
-    z-index: -3;
-}
 
 ion-button {
     span {
@@ -168,13 +159,11 @@ ion-button {
 @media only screen and (min-width: 1024px) {
     .middleBanner-loginSection {
         margin: 0;
-        margin-right: 2rem;
     }
 }
 
 @media only screen and (min-width: 1280px) {
     .middleBanner {
         justify-content: space-between;
-        max-width: 1280px;
     }
 }
