--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body,
 html {
     font-family: 'Montserrat', sans-serif;
