--- a/src/app/components/stores/stores.component.scss
+++ b/src/app/components/stores/stores.component.scss
@@ -14,7 +14,21 @@
 }
 
 .storesCarouselContainer {
-    margin: 1rem 2rem;
+    margin: 2rem 0;
 
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.storeTypesOverview {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 30rem;
+    margin: 0 auto;
+    text-align: center;
+
+    border-top: 1px #535353 dashed;
 }
