--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,7 +2,7 @@
     <Header id="header"></Header>
 
     <Banner></Banner>
-
+    <!-- 
     <ion-grid class="myybaKnowMore-wrapper">
         <ion-col size="1"></ion-col>
 
@@ -22,14 +22,14 @@
                         for you!
                     </ion-text>
 
-                    <!-- <ion-card>
+                    <ion-card>
                     <ion-card-content>
                         <iframe width="421" height="239" src="https://www.youtube.com/embed/4zrDYkzWB4w"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe> 
                         </ion-card-content>
-                    </ion-card> -->
+                    </ion-card>
 
                     <ion-button color="whatsapp" class="btn-knowMore">
                         <span>Know More</span>
@@ -40,7 +40,7 @@
         </ion-col>
 
         <ion-col size="1"></ion-col>
-    </ion-grid>
+    </ion-grid>-->
 
     <Stores></Stores>
 </ion-content>
