--- a/src/app/components/stores/stores.component.scss
+++ b/src/app/components/stores/stores.component.scss
@@ -1,3 +1,8 @@
+.storeTypesWrapper {
+    padding-top: 1rem;
+    background: #EFEFEF;
+}
+
 .storeTypesHeading {
     display: flex;
     justify-content: center;
@@ -7,11 +12,18 @@
 
     font-weight: 700;
     font-size: 24px;
-    color: white;
+    color: black;
 
-    background: linear-gradient(93.16deg, #0010A0 22.15%, #52189C 55.27%, #580DA3 88.85%);
-
+    // background: linear-gradient(93.16deg, #0010A0 22.15%, #52189C 55.27%, #580DA3 88.85%);
 }
+
+.storesMainContainer {
+    background: #EFEFEF;
+    margin-bottom: 3rem;
+
+    box-shadow: none !important;
+}
+
 
 .storesCarouselContainer {
     margin: 2rem 0;
@@ -26,9 +38,7 @@
     flex-direction: column;
     justify-content: center;
 
-    width: 30rem;
+    width: 26rem;
     margin: 0 auto;
     text-align: center;
-
-    border-top: 1px #535353 dashed;
 }
