--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,45 +2,8 @@
     <Header id="header"></Header>
 
     <Banner></Banner>
-    <!-- 
-    <ion-grid class="myybaKnowMore-wrapper">
-        <ion-col size="1"></ion-col>
-
-        <ion-col size="10" class="flex justify-end">
-            <ion-row class="discussImage-container">
-                <ion-img src="/assets/images/DiscussImage.png" class="object-contain discussImg"></ion-img>
-            </ion-row>
-
-            <ion-row class="myybaKnowMore-Section">
-                <ion-row class="myybaKnowMoreQuestion">
-
-                    <ion-text class="font-medium xl:text-lg pb-3">What Myyba Shops has to offer?</ion-text>
-                    <ion-text class="font-bold xl:text-lg italic ml-auto">Be it online
-                        store
-                        to marketing to designing to
-                        delivery solutions, your bizz buddy handle it all
-                        for you!
-                    </ion-text>
-
-                    <ion-card>
-                    <ion-card-content>
-                        <iframe width="421" height="239" src="https://www.youtube.com/embed/4zrDYkzWB4w"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe> 
-                        </ion-card-content>
-                    </ion-card>
-
-                    <ion-button color="whatsapp" class="btn-knowMore">
-                        <span>Know More</span>
-                        <ion-icon name="chevron-forward-outline"></ion-icon>
-                    </ion-button>
-                </ion-row>
-            </ion-row>
-        </ion-col>
-
-        <ion-col size="1"></ion-col>
-    </ion-grid>-->
-
+    
     <Stores></Stores>
+    
+    <Features></Features>
 </ion-content>
