Rename: stores to storetypes

--- a/src/app/components/storestypes/stores.component.html
+++ b/src/app/components/storestypes/stores.component.html
@@ -16,7 +16,7 @@
             </ion-slide>
         </ion-slides>
     </ion-card>
-    <ion-row class="storeTypesOverview border">
+    <ion-row class="storeTypesOverview">
         <ion-text class="font-bold text-xl uppercase mt-5">E-commerce Website</ion-text>
         <ion-text class="text-lg">Get a power-packed e-commerce website & impress your customers with a beautiful store.</ion-text>
     </ion-row>
