--- a/src/app/components/myybaplans/myybaplans.component.scss
+++ b/src/app/components/myybaplans/myybaplans.component.scss
@@ -28,13 +28,27 @@
 .myybaPlansCarousel {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     flex-direction: column;
 
-    border: 1px solid white;
-    padding: 4rem;
+    height: 14rem;
+    width: 14rem;
+
+    background: linear-gradient(black, black) padding-box,
+        linear-gradient(180deg, rgb(255, 255, 255), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.5)) border-box;
+    border-radius: 10px;
+    border: 1px solid transparent;
 }
 
 ion-button.ion-color-backplan-btn {
     --background: black;
     border: 1px solid white;
+    border-radius: 5px;
+}
+
+.border-gradient-recommended {
+    background: linear-gradient(black, black) padding-box,
+        linear-gradient(180deg, rgb(255, 220, 95), rgba(255, 220, 95, 0.38), rgb(255, 220, 95)) border-box;
+    border-radius: 10px;
+    border: 1px solid transparent;
 }
