New: Finally styling of myybaPlans

--- a/src/app/components/myybaplans/myybaplans.component.html
+++ b/src/app/components/myybaplans/myybaplans.component.html
@@ -23,6 +23,9 @@
                 </ion-slide>
             </ion-slides> -->
             <ion-row class="myybaPlansCarousel">
+                <ion-text class="discountPercentage">
+                    5%off
+                </ion-text>
                 <ion-text id="planSpan" class="uppercase text-2xl font-semibold text-[#FFDC5F]">
                     1 month plan
                 </ion-text>
