--- a/src/app/components/myybaplans/myybaplans.component.scss
+++ b/src/app/components/myybaplans/myybaplans.component.scss
@@ -30,6 +30,7 @@
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
+    position: relative;
 
     height: 14rem;
     width: 14rem;
@@ -38,6 +39,21 @@
         linear-gradient(180deg, rgb(255, 255, 255), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.5)) border-box;
     border-radius: 10px;
     border: 1px solid transparent;
+}
+
+.discountPercentage {
+    position: absolute;
+    top: 0;
+    margin-top: -0.75rem;
+    
+    color: white;
+    padding: 0 0.3rem;
+    background: black;
+
+    border: 2px solid white;
+    border-radius: 6px;
+    text-transform: uppercase;
+    font-weight: 600;
 }
 
 ion-button.ion-color-backplan-btn {
