--- a/src/app/components/myybaplans/myybaplans.component.html
+++ b/src/app/components/myybaplans/myybaplans.component.html
@@ -1,46 +1,43 @@
 <ion-grid class="myybaPlans-Wrapper">
     <ion-row class="myybaPlans-Container">
         <ion-row class="containerTitle">
-            <ion-text class="text-lg font-bold">
+            <ion-text class="text-lg font-bold uppercase">
                 Pricing
             </ion-text>
         </ion-row>
         <ion-card class="plansSection">
-            <!-- <ion-slides>
+            <ion-slides [options]="slideOpts">
                 <ion-slide *ngFor="let plan of plans">
-                    <ion-row [ngClass]="{'border-gradient-recommended': plan.recommende==true}"
-                        class="myybaPlansCarousel">
+                    <ion-row [ngClass]="{'myyba-plan-recommended': plan.recommended==true}" class="myybaPlansCarousel">
+                        <ion-text [ngClass]="{'discountPercentage-recommended': plan.recommended == true}"
+                            *ngIf="plan.percentOff !== '' " class="discountPercentage">
+                            {{plan.percentOff}}
+                        </ion-text>
                         <ion-text id="planSpan" class="uppercase text-2xl font-semibold text-[#FFDC5F]">
                             {{plan.span}}
                         </ion-text>
-                        <ion-text id="planPrice" class="text-3xl text-white font-bold">
-                            {{plan.price}}
-                        </ion-text>
-                        <ion-button color="backplan-btn" class="plan-btn w-[90%]">
-                            Select a plan
+                        <ion-row id="planPrices" class="flex flex-col items-center">
+                            <ion-text id="discountedPrice" class="text-xl font-semibold line-through">
+                                {{plan.discountPrice}}
+                            </ion-text>
+                            <ion-text id="price" class="text-2xl text-white font-bold">
+                                {{plan.actualPrice}}
+                            </ion-text>
+                        </ion-row>
+                        <ion-button color="{{plan.recommended == true ? 'recommended_btn' : 'blackplan_btn'}}"
+                            class="plan-btn w-[90%]">
+                            Select plan
                         </ion-button>
+                        <ion-text *ngIf="plan.recommended == true"
+                            class="bg-[#FFDC5F] text-black px-3 rounded-b-md uppercase text-sm font-bold absolute bottom-0 -mb-5">
+                            Recommended
+                        </ion-text>
                     </ion-row>
                 </ion-slide>
-            </ion-slides> -->
-            <ion-row class="myybaPlansCarousel">
-                <ion-text class="discountPercentage">
-                    5%off
-                </ion-text>
-                <ion-text id="planSpan" class="uppercase text-2xl font-semibold text-[#FFDC5F]">
-                    1 month plan
-                </ion-text>
-                <ion-row id="planPrices" class="flex flex-col items-center">
-                    <ion-text id="discountedPrice" class="text-xl font-semibold line-through">
-                        ₹2,999
-                    </ion-text>
-                    <ion-text id="price" class="text-2xl text-white font-bold">
-                        ₹2,849*
-                    </ion-text>
-                </ion-row>
-                <ion-button color="backplan-btn" class="plan-btn w-[90%]">
-                    Select a plan
-                </ion-button>
-            </ion-row>
+            </ion-slides>
+
+            <ion-row id="pricingBorderBottom"
+                class="bg-black border-b border-dashed mx-auto border-[#FFDC5F] w-[45%]"></ion-row>
         </ion-card>
     </ion-row>
 </ion-grid>
