--- a/src/app/components/myybaplans/myybaplans.component.scss
+++ b/src/app/components/myybaplans/myybaplans.component.scss
@@ -1,6 +1,7 @@
 .myybaPlans-Wrapper {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .myybaPlans-Container {
@@ -13,16 +14,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    padding: 1.5rem 0;
 }
 
 .plansSection {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 47vh;
-    width: 200vh;
-
+    justify-content: space-between;
+    flex-direction: column;
     background: black;
+
+    padding-bottom: 3rem;
 }
 
 .myybaPlansCarousel {
@@ -34,6 +37,7 @@
 
     height: 14rem;
     width: 14rem;
+    margin: 5rem 0;
 
     background: linear-gradient(black, black) padding-box,
         linear-gradient(180deg, rgb(255, 255, 255), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.5)) border-box;
@@ -56,15 +60,32 @@
     font-weight: 600;
 }
 
-ion-button.ion-color-backplan-btn {
+ion-button.ion-color-blackplan_btn {
     --background: black;
     border: 1px solid white;
     border-radius: 5px;
+    box-shadow: 0px 4px 12px 0px #00000040;
+    font-weight: 600;
 }
 
-.border-gradient-recommended {
+ion-button.ion-color-recommended_btn {
+    --background: black;
+    border: 1px solid #FFDC5F;
+    border-radius: 5px;
+    box-shadow: 0px 4px 12px 0px #00000040;
+
+    color: #FFDC5F;
+    font-weight: 600;
+}
+
+.myyba-plan-recommended {
     background: linear-gradient(black, black) padding-box,
         linear-gradient(180deg, rgb(255, 220, 95), rgba(255, 220, 95, 0.38), rgb(255, 220, 95)) border-box;
     border-radius: 10px;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
+}
+
+.discountPercentage-recommended {
+    color: #FFDC5F;
+    border: 2px solid #FFDC5F;
 }
